--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "chimame",
   "license": "MIT",
   "scripts": {
-    "build": "netlify-lambda -c build functions",
+    "build": "netlify-lambda build functions"
   },
   "dependencies": {
     "@serverless-chrome/lambda": "^1.0.0-55",
